@@ -1,0 +1,6 @@
+
+pixmapdir = $(datadir)/icons/hicolor/22x22/apps
+
+pixmap_DATA = synce-gray.png synce-color.png
+
+EXTRA_DIST = $(pixmap_DATA)
